# MuJoCo-kist

./: .gitignore  CMakeLists.txt
JointControl/: JointControl.cpp  JointControl_최신.cpp
include/: controller.h  mapping.h  observation.h  robotmodel.h
log/: latest_list
model/: fr3.xml
mujoco-3.6.0/: MUJOCO_LOG.TXT  basic  basic_stl  urdf2mjcf  urdf2mjcf.c
mujoco-3.6.0/sample/: basic.cc
mujoco-3.6.0/simulate/: main.cc  simulate.cc
pyfile/: 415_com_on.onnx  415_policy.pt  POLICY.md  kapex.py
pyfile/exported/: policy.onnx  policy.onnx.data  policy.pt
pyfile/exported-421/: policy.onnx  policy.onnx.data  policy.pt
pyfile/exported-421_22hr/: policy.onnx  policy.onnx.data  policy.pt
src/: main.cc
src/control/: controller.cpp
src/observation/: CMakeLists.txt  observation.cpp
src/policy/: policy.cpp
src/robot/: robotmodel.cpp
